# Corewar

./: Makefile  accidental_present.c  author  deadline_lover.s
FINAL/: Makefile
FINAL/inc/: corewar_vm.h
asm/: Makefile  a.out  add_elements.c  args_types_tools.c  asm  asm.h  batman.cor  batman.s  bee_gees.s  cases_batman.s  check_args_types.c  check_asm_input.c  check_command.c  check_command_line.c  check_command_line_newver.c  check_comment.c  check_if_words_correct.c  check_input.c  check_name.c  cmnd_line_tools.c  cmnd_line_tools_2.c  commands.h  functions.c  label_tools.c  main.c  name_tools.c  new_elements.c  nolik.s  op.h  orig_batman.s  paehali.s  parse_line.c  parse_lines.c  read_from_dot_s.c  seps_check_bakup.c  temp.c  test_tabs.c  tester.cor  tester.s  write_cmnd_line_words.c  (+1 more)
asm/side/: Makefile  asm.h  check_comment.c  commands_info.c  main.c  read_from_dot_s.c
asm/temp/: a.out  bigzork.cor  check_command_line_backup.c  check_command_line_oldver.c  helltrain.cor  kekeke.c  label_tools_backup_latest.c  tabs_strsplit.c  temp.c  test_tabs.c  yeeee.cor
asm_old/: check_args_types.c  check_comment.c  comment_tools.c  functions.c  main.c  new_elements.c  words_tools.c  words_tools_2.c  write_cmnd_line_words.c  write_to_dot_cor.c
compiler/src/: functions.c  write_to_dot_cor.c
inc/: asm.h  corewar_vm.h
libft/: Makefile
libft/src/: ft_lstnew.c
vm/: CMakeLists.txt  Makefile  corewar  corewar_vm.h  lapsang.cor  main.c  my_test  org_test
vm/inc/: corewar_vm.h  operation.h
vm/src/: arg_read.c  carriage.c  check_args.c  check_live_carriage.c  check_players.c  errors.c  fight.c  get_val.c  main.c  mem_clean.c  op.c  op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  player.c  player_id.c  players.c  printer.c  vis_init.c  visualiser.c
(+23 files in other folders)
